# isrc101-agent

./: .gitignore  AGENT.md  DEEPSEEK_SETUP.md  README.md  check_config.py  main.py  pyproject.toml  run.py  setup.sh  setup_deepseek.sh  test_deepseek.py
data/: game_scores.db
isrc101_agent/: __init__.py  agent.py  command_router.py  config.py  context_window.py  diff_utils.py  errors.py  grounding.py  llm.py  logger.py  main.py  rendering.py  session.py  skills.py  startup_profiler.py  stream_renderer.py  theme.py  tokenizer.py  ui.py  ui_state.py  undo.py  url_utils.py  web_processing.py
tests/: conftest.py  test_agent_stream.py  test_command_grounding_tuning.py  test_command_router.py  test_config.py  test_config_grounding.py  test_crew_config.py  test_dag_rendering.py  test_empty_response.py  test_file_ops.py  test_file_ops_performance_flags.py  test_git_ops.py  test_grounding.py  test_grounding_optimization.py  test_modes.py  test_registry_modes.py  test_scratchpad.py  test_shell.py  test_skills_cache.py  test_startup_profiler.py  test_stream_renderer.py  test_task_board.py  test_token_budget.py
web_doudizhu/: .env.example  CHECKLIST.md  Dockerfile  FRONTEND_CHINESE_UPDATE.md  FRONTEND_IMPROVEMENTS.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  check_server.py  diagnose_connection.py  docker-compose.yml  gunicorn_config.py  init_demo_data.py  main.py  nginx.conf  requirements.txt  run.bat  run.sh  start_daemon.bat  start_daemon.sh  test_ai_bidding.py  test_ai_strategies.py  test_connection.py  test_game.py  test_import.py
(+60 files in other folders)
